--- a/app/src/main/res/layout/notice_item.xml
+++ b/app/src/main/res/layout/notice_item.xml
@@ -17,17 +17,30 @@
         android:layout_height="55dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/notice_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="8dp"
-            android:gravity="left"
-            android:text="通知标题"
-            android:textColor="@color/black_text"
-            android:textSize="14sp" />
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/notice_title"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:gravity="left"
+                android:text="通知标题"
+                android:textColor="@color/black_text"
+                android:textSize="14sp" />
+            <ImageView
+                android:id="@+id/iv_zhuanfa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:src="@mipmap/forward"/>
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
